--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-hello World
+<!doctype html>
+<html lang="en">
+    <header>
+        <meta charset="UTF-8">
+        <title>test</title>
+        <link href="styles.css" rel="stylesheet">
+    </header>
+
+    <body>
+        <h1>test h1</h1>
+        <p>
+            <h2>test h2</h2>
+            <hr />
+            <div>
+                <a href="https://google.com"> google </a>
+            </div>
+        </p>
+    </body>
+
+</html>
