--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     </header>
 
     <body>
-        <h1>test h1</h1>
-        <p>
+        <h1>Fantastic Four</h1>
+        <p> 
+            <img src="BountifulCreativeBlackmamba-max-1mb.gif">
             <h2>test h2</h2>
             <hr />
             <div>
