--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
         <h1>Fantastic Four</h1>
         <p> 
             <img src="BountifulCreativeBlackmamba-max-1mb.gif">
-            <h2>test h2</h2>
+            <h3><blockquote>Give a man a fish, he will be full. teach a man to fish, he will be full forever. Give a fish a man, he's in love. Teach a fish to man, integrated into society. Give a man a bath, kind of a fish? Give a fish a fish, one fish too many. Give a man a man, love is love <3</blockquote></h3>
+            <h2>Who are we?</h2>
             <hr />
+            <h4>Olya</h4>
+            <h5>Hello everyone! My name is Olya and I’m 18 years old. I’m a Fronted manager of our group! An interesting fact about me is that I own 3 horses and one pony back home. Two of them are purple. Also, I can fly a helicopter. What about you?</h5>
+            <h4>Ken</h4>
+            <h5>Ken Kobayashi, born in Houston, Texas in 2002, is a 5 string fiddler, cat lover, and country music obsessor. Born in a house surrounded with dogs and classical music, but miraculously inherited country music skills.</h5>
+            <br>
+            <h4>Ruth or Aima?)</h4>
+            <h5>Hi! My name is Aima Katt and I am really good at playing the keyboard. My person says that I am the best keyboardist in the whole house!! This is a picture of me, aren’t I cute? I play best after having naps in the spots in the house where the sun shines.</h5>
             <div>
                 <a href="https://google.com"> google </a>
             </div>
