--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Fantastic Four</h1>
         <p> 
-            <img src="BountifulCreativeBlackmamba-max-1mb.gif";margin:25px 500px 200px 100px>
+            <img src="BountifulCreativeBlackmamba-max-1mb.gif" style="vertical-align:middle;margin:0px 500px">>
             <h3><blockquote>Give a man a fish, he will be full. teach a man to fish, he will be full forever. Give a fish a man, he's in love. Teach a fish to man, integrated into society. Give a man a bath, kind of a fish? Give a fish a fish, one fish too many. Give a man a man, love is love <3</blockquote></h3>
             <h2>Who are we?</h2>
             <hr />
