--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <p> 
             <img src="BountifulCreativeBlackmamba-max-1mb.gif" style="vertical-align:middle;margin:0px 300px">
             <h3>
+            <h3>
                 <blockquote>Give a man a fish, he will be full. teach a man to fish, he will be full forever. Give a fish a man, he's in love. Teach a fish to man, integrated into society. Give a man a bath, kind of a fish? Give a fish a fish, one fish too many. Give a man a man, love is love <3</blockquote>
                 <br>
                 Sonny
@@ -26,7 +27,8 @@
             <h4>Ruth or Aima?)</h4>
             <h5>Hi! My name is Aima Katt and I am really good at playing the keyboard. My person says that I am the best keyboardist in the whole house!! This is a picture of me, aren’t I cute? I play best after having naps in the spots in the house where the sun shines.</h5>
             </div>
-            <img src="cat-g1261f19f8_1920.jpg" width="700" style="vertical-align:middle;margin:0px 370px">
+            <img src="cat-g1261f19f8_1920.jpg" style="vertical-align:middle;margin:0px 370px" width="700">
+            
             <div>
                 <a href="https://google.com"> google </a>
             </div>
