--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <header>
         <meta charset="UTF-8">
-        <title>test</title>
+        <title>FANTASIC FOUR</title>
         <link href="styles.css" rel="stylesheet">
     </header>
 
